 - Fix for bug 27314: Missing folder id on itip analyze response with exceptions.

* 2013-07-30 - thorben.betten@open-xchange.com

 - Fix for bug 27868: Added null guard
 - Fix for bug 27872: Introduced possibility to output unparsable images to disk for debugging purpose
 - Fix for bug 27477: Refactored IMAP exception class to let its error message reside in a dedicated translatable class file

* 2013-07-30 - tobias.friedrich@open-xchange.com

 - Fix for bug 27396: Added "supported_capabilities" to indicate non-publishable folders   
 - Fix for bug 26639: Introduced image data source for user contacts   

* 2013-07-29 - jan.bauerdick@open-xchange.com

 - Fix for bug 27775: Use new build system to build admin clt packages

* 2013-07-29 - thorben.betten@open-xchange.com

 - Fix for bug 27845: Fixed imports for login counter tool
 - Fix for bug 27640: Ignore delimiting white-space between mail-safe encoded words
 - Fix for bug 27863: Added null guard while composing mail debug information
 - Fix for bug 27864: Deal with possible null elements in passed message array on APPEND operation
 - Fix for bug 27866: Handle possible null return value from iCal parse attempt

* 2013-07-26 - marcus.klein@open-xchange.com

 - Fix for bug 26803: Not adding ConcurrentMarkSweepGC options in post install script if ParallelOldGC is configured.

* 2013-07-26 - thorben.betten@open-xchange.com

 - Fix for bug 27706: Deal with UTC time zone set for UTC properties

* 2013-07-26 - tobias.friedrich@open-xchange.com

 - Fix for bug 27722: Introduced various optimizations to speed up batch deletion of many files  

* 2013-07-26 - martin.herfurth@open-xchange.com

 - Fix for bug 27210: Avoid event handling from interrupting user deletion.
 - Fix for bug 26109: Bad exception detection on iTip handling.

* 2013-07-25 - marcus.klein@open-xchange.com

 - Fix for bug 26607: Optimized JMX queries for certain MBeans using object names and removed multi threading.
